# server

./: .gitignore  .replit  README.md  classes.py  controller.py  data.json  main.py  pyproject.toml  servidor.py  shared_data.py
saves/: data.json
static/: README.md  index.html  login.html  login_localhost.html  master.html  player.html  styles.css
static/res/: de.json  en.json  es.json  it.json
static/scripts/: domUtils.js  eventHandlers.js  functions.js  languageStrings.js  master.js  player.js  requestHandler.js  webSocketClient.js  webSocketService.js  websocketClient.js
static/styles/: LICENSE.txt  news-style.css
