[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Antonio Scalia <antoniosalvatores@gmail.com>"]
readme = "README.md"
packages = [{include = "repl_nix_server"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.10.3"
pint = "^0.24.3"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"  
